# Kamuidrome

./: .gitignore  README.rst  pyproject.toml  testt.py
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
src/kamuidrome/: cache.py  meta.py  pack.py  prism.py  retry.py
src/kamuidrome/cli/: __main__.py  add.py  init.py  list.py  update.py
src/kamuidrome/modrinth/: client.py  models.py  mrpack.py  utils.py
src/kamuidrone/: cache.py  cli.py  meta.py  pack.py
src/kamuidrone/cli/: __main__.py  add.py
src/kamuidrone/modrinth/: client.py  models.py  utils.py
