[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kamuidrome"
version = "0.7.0"
description = "Modern Minecraft modpack builder"
authors = [
    "Lura Skye <l@veriny.tf>",
    "Pebbles Dickinson <cat@not.a.real.person>"
]
readme = "README.rst"
packages = [{include = "kamuidrome", from = "src"}]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[tool.poetry.dependencies]
python = ">=3.12"
httpx = ">=0.26.0"
attrs = ">=23.2.0"
tomlkit = ">=0.12.3"
rich = ">=13.7.0"
arrow = ">=1.3.0"
platformdirs = ">=4.1.0"
more-itertools = ">=10.2.0"
cattrs = ">=23.2.3"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.14"
pyright = ">=1.1.348"

[tool.poetry.scripts]
kamuidrome = "kamuidrome.cli.__main__:main"

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
typeCheckingMode = "strict"

reportImplicitOverride = "warning"
reportUnusedVariable = false

[tool.ruff]
target-version = "py312"
respect-gitignore = true
# fix = true
src = ["src/kamuidrome"]
line-length = 100
show-source = true

select = [
    "RUF",
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "Q",
    "YTT",
    "PYI",
    "SIM",
    "RET",
    "PERF",
    "PIE",
    "SIM",
    "C4",

    # specific docstring rules
    "D101", "D102", "D103",           # mandate docstrings
    "D201", "D204", "D211", "D419",   # less ugly docstrings
]
ignore = [
    "W291",
    "W293",
]

[tool.ruff.per-file-ignores]
"tests/test_*" = ["D"]

[tool.ruff.isort]
combine-as-imports = true
